<resources>
    <string name="app_name">EmergencyPhoneNumbers</string>
    <string name="icon_name" translatable="false">Emergency\nNumbers</string>
    <string name="pref_previously_started" translatable="false">Previously started</string>
    <string name="pref_auto_location">Always use current location</string>
    <string name="pref_auto_location_summary">Set the country automatically using your current location</string>
    <string name="pref_call_confirmation">Call confirmation</string>
    <string name="pref_call_confirmation_summary">Ask before calling when an emergency number is pressed</string>
    <string name="pref_change_country">Change country</string>
    <string name="pref_change_country_summary">Select your country from a list</string>
    <string name="preferences_title_preferences">Preferences</string>
    <string name="preferences_title_about">About</string>
    <string name="pref_languages_screen">Language</string>
    <string name="pref_web_page">Fork on GitHub</string>
    <string name="pref_web_page_summary">The app is completely open-source so you can contribute and take a look at the code.</string>
    <string name="pref_about">About</string>
    <string name="pref_about_summary">Meet who is behind this app</string>
    <string name="pref_disclaimer">Disclaimer</string>
    <string name="pref_disclaimer_message">
        This app should never be used when not related to emergencies. The cost of the calls is borne by the caller and the rates may vary. Not all numbers are free. This application only facilitates the search of the emergency numbers with your location. Its proper functioning depends on the network coverage and your phone carrier.
    </string>
    <string name="pref_faq">FAQ/Disclaimer</string>
    <string name="pref_tutorial">Tutorial</string>
    <string name="pref_tutorial_summary">Quickly learn how to best use this app\'s features.</string>

    <string name="fire_string">Fire</string>
    <string name="police_string">Police</string>
    <string name="medical_string">Medical</string>

    <string name="emergency_title">EMERGENCY</string>
    <string name="location_title">LOCATION</string>
    <string name="settings_title">SETTINGS</string>

    <string name="about_dialog_title">"This app was developed @ USI by the following students:"</string>
    <string-array name="names_array">
        <item>Patrick Balestra</item>
        <item>Valerie Burgener</item>
        <item>Emanuele Giuseppe Esposito</item>
        <item>Aron Fiechter</item>
        <item>Susanna Riccardi</item>
    </string-array>
    <string-array name="websites_url_array">
        <item>http://atelier.inf.unisi.ch/~balesp/</item>
        <item>http://atelier.inf.unisi.ch/~burgev</item>
        <item>http://atelier.inf.unisi.ch/~esposem/</item>
        <item>http://atelier.inf.unisi.ch/~fiecha/</item>
        <item>http://atelier.inf.unisi.ch/~riccas/</item>
    </string-array>
    <string name="finding_location">Finding your location&#8230;</string>
    <string name="you_are_here">You are here</string>

    <!--Accessibility-->
    <string name="country_flag">Select country button</string>
    <string name="location_button">Location</string>
    <string name="phone_icon">Phone icon</string>
    <string name="plus_contact_button">Add contact</string>
    <string name="search_contact">Search contact</string>

    <string name="country_selection_dialog_title_yes">Select your country:</string>

    <string name="country_selection_dialog_title_no">Not available</string>
    <string name="country_selection_dialog_message_no">Disable \"Always use current location\" in settings to be able to change country</string>

    <string name="CANCEL">CANCEL</string>
    <string name="DONE">DONE</string>
    <string name="CLOSE">CLOSE</string>
    <string name="OK">OK</string>
    <string name="DISABLE">DISABLE</string>
    <string name="CLEAR">CLEAR</string>

    <string-array name="faq_titles">
        <item>Disclaimer</item>
        <item>How can I add my own contacts?</item>
        <item>How can I change the country?</item>
        <item>I found a bug and I have some feedback, what can I do?</item>
    </string-array>
    <string-array name="faq_contents">
        <item>By downloading this app, you explicitly accept these conditions: \nThis app should never be used when not related to emergencies. The cost of the calls is borne by the caller and the rates may vary. Not all numbers are free. This application only facilitates the search of the emergency numbers with your location. Its proper functioning depends on the network coverage and your phone carrier. We are NOT responsible for any use you will do of this app, you are responsible for your action! </item>
        <item>In the Emergency tab, you can press on the add button at the bottom right to add new contact from your library. Press on it to start a call.</item>
        <item>Tap the current country name or flag in the toolbar and choose another country. You can also turn on the "Always use current location" feature so that the selected country always reflects the country you are in.</item>
        <item>Please contact us via email and tell us everything you have to say. We are always listening!</item>
    </string-array>

    <string name="welcome">Welcome!</string>
    <string name="thanks">Thank you for downloading this app.</string>
    <string name="call_title">Press a button</string>
    <string name="call_description">to start a call in case of emergency.</string>
    <string name="country_title">Change country</string>
    <string name="country_description">by pressing on the country name.</string>
    <string name="map_title">Your position</string>
    <string name="map_description">is displayed on the map.</string>

    <string name="contact_us">Contact us</string>
    <string name="contact_us_description">Send us an email with your feedback.</string>
    <string name="contact_developer_uri" translatable="false">mailto:emergencyphonenumbers@gmail.com</string>

    <string name="ellipses" translatable="false">&#8230;</string>
    <string name="contacts_toast">Deselected all contacts. Press CANCEL to undo.</string>
    <string name="contacts_loading">Loading&#8230;</string>
    <string name="search_hint">Search</string>

</resources>